2003-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3141566 -- non-reproducible nil-dereference in HTMLGenericFormElementImpl at firstdirect.com

        * khtml/html/html_formimpl.cpp: (HTMLGenericFormElementImpl::defaultEventHandler):
	Check for the case where the view is 0.

2003-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed two-day-old regression where we get nil-dereferences with text areas

        * kwq/KWQTextArea.mm:
        (-[KWQTextArea _createTextView]): Don't do the setWidget: here because widget is always nil at this point.
        (-[KWQTextArea initWithQTextEdit:]): Do it here instead.

2003-01-22  David Hyatt  <hyatt@apple.com>

	Fix for 3126927, don't let absolute positioned blocks grow
	to accommodate content.  They overflow instead.
	
        Reviewed by mjs

        * khtml/rendering/render_box.cpp:
        (RenderBox::calcAbsoluteVertical):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_object.h:

2003-01-22  David Hyatt  <hyatt@apple.com>

	Fix for 3153316, selection busted on google.com.  For now keep
	mouse events grabbing the absolutePosition of elements, and don't
	ever let them grab the absolutePosition of text nodes.
	
        Reviewed by john.

        * khtml/khtml_events.cpp:
        (khtml::MouseEvent::MouseEvent):
        
2003-01-22  Chris Blumenberg  <cblu@apple.com>

	Renamed isPointSelected to isPointInsideSelection because it's a better name.

        Reviewed by darin.

        * khtml/khtml_part.cpp:
        (KHTMLPart::isPointInsideSelection): 
        (KHTMLPart::khtmlMousePressEvent):
        * khtml/khtml_part.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]):

2003-01-21  Chris Blumenberg  <cblu@apple.com>

	Added support for text dragging.

        Reviewed by dave.

        * khtml/khtml_events.cpp: